update the backend